--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -9,17 +9,17 @@
     <% @boats.in_groups_of(2, false).each do |group| %>
       <div class="row">
       <% group.each do |boat| %>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 boat-card">
           <%= link_to boat_path(boat) do %>
           <% if boat.photo %>
           <%= cl_image_tag boat.photo %>
           <% else %>
           <%= image_tag "sailboat.jpg" %>
           <% end %>
-          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= asset_path('sailboat.jpg') %>');">
-            <h1><%= boat.name %></h1>
-            <p><%= boat.category %></p>
-            <p><%= boat.capacity %></p>
+          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('<%= asset_path('sailboat.jpg') %>');">
+            <h1 class="card-boat-name"><%= boat.name %></h1>
+            <p class="card-boat-category"><%= boat.category %></p>
+            <p class="card-boat-price"> $ <%= boat.price %></p>
           </div>
           <% end %>
 
