--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,4 @@
 @import "layout/index";
 @import "components/index";
 @import "pages/index";
-@import "dashboard/tabs";
-@import "dashboard/dash"
+@import "dashboard/index";
