--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -128,6 +128,7 @@
                   <p><%= booking.check_in %> - <%= booking.check_out %></p>
                   <p><%= booking.boat.description %></p>
                 </div>
+                <hr size="10">
                 <div class="review"><%= link_to "View Receipt", boat_path(booking.boat_id) %></div>
               </div>
             </div>
