--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,28 +1,63 @@
-<div class="container">
-  <h1>Create Booking Request</h1>
-  <div class="boat-info">
-    <h2>Boat:</h2>
-    <%= image_tag ("http://placehold.it/220x220") %>
-    <ul>
-      <li><%= @booking.boat.name %></li>
-      <li><%= @booking.boat.capacity %></li>
-      <li><%= @booking.boat.category %></li>
-      <li><%= @booking.boat.city %></li>
-      <li><%= @booking.boat.address %></li>
-    </ul>
+<div class="booking-container container">
+  <div class="row">
+    <div class="booking-main-row col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
 
-  </div>
-  <div class="owner-info">
-    <h2>Host:</h2>
-    <%= image_tag ("http://placehold.it/220x220") %>
-    <ul>
-      <li><%= @booking.boat.user.full_name %></li>
-      <li><%= @booking.boat.user.bio %></li>
-    </ul>
-  </div>
-  <div class="dates-and-price">
-    <%= render 'form' %>
-    <!-- use js to dynamically calculate price based on chosen dates -->
-    <h3>Price: <%= (7 * @booking.boat.price) %></h3>
+
+      <h1 class="text-center">Create Booking Request</h1>
+
+      <hr>
+
+      <div class="boat-info">
+        <h2>The Boat:</h2>
+        <div class="row is-flex">
+          <div class="boat-image text-center col-xs-12 col-md-6 col-lg-6">
+            <%= image_tag ("http://placehold.it/220x220") %>
+          </div>
+
+          <div class="boat-description col-xs-12 col-md-6 col-lg-6">
+            <h2><%= @booking.boat.name %></h2>
+            <ul class="list-inline">
+              <li><%= @booking.boat.city %></li>
+              <li><%= @booking.boat.category %></li>
+            </ul>
+            <p><%= @booking.boat.description %></p>
+          </div>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="owner-info">
+        <h2>Your Host:</h2>
+        <div class="row is-flex">
+          <div class="owner-image text-center col-xs-12 col-md-6 col-lg-6">
+            <%= image_tag ("http://placehold.it/220x220") %>
+          </div>
+
+          <div class="owner-description col-xs-12 col-md-6 col-lg-6">
+            <h2><%= @booking.boat.user.full_name %></h2>
+            <p><%= @booking.boat.user.bio %></p>
+          </div>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="dates-and-price">
+        <div class="row">
+          <div class="text-center col-xs-12 col-md-6 col-lg-6">
+            <%= render 'form' %>
+          </div>
+          <h3>Price: <%= (7 * @booking.boat.price) %></h3>
+        </div>
+      </div>
+
+
+
+
+
+
+    </div>
   </div>
 </div>
+
