added listings for the boats you are offering. base foundation is done

--- a/app/assets/stylesheets/dashboard/_misc.scss
+++ b/app/assets/stylesheets/dashboard/_misc.scss
@@ -5,3 +5,15 @@ hr {
     background-color: #333; /* Modern Browsers */
     opacity: 0.4;
 }
+.pad-12 {
+  padding: 0 12.5px;
+}
+.big {
+  height: 220px;
+}
+.middle {
+  height: 150px;
+}
+#title {
+  margin-top: 10px;
+}
