--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -3,5 +3,5 @@
 
   <%= f.input :check_out, input_html: { class: "datepicker" }%>
 
-  <%= f.button :submit, input_html: { class: "btn-book" }%>
+  <%= f.button :submit, "Create", class: "btn-book"%>
 <% end %>
