--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,17 +1,18 @@
 <div class="booking-container container">
   <div class="row">
     <div class="booking-main-row col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+      <div class="booking-header">
+        <h1 class="text-center">Create Booking Request</h1>
+        <hr>
+      </div>
 
 
-      <h1 class="text-center">Create Booking Request</h1>
-
-      <hr>
 
       <div class="boat-info">
         <h2>The Boat:</h2>
         <div class="row is-flex">
           <div class="boat-image text-center col-xs-12 col-md-6 col-lg-6">
-            <%= image_tag ("http://placehold.it/220x220") %>
+            <%= cl_image_tag @booking.boat.photo %>
           </div>
 
           <div class="boat-description col-xs-12 col-md-6 col-lg-6">
@@ -31,7 +32,7 @@
         <h2>Your Host:</h2>
         <div class="row is-flex">
           <div class="owner-image text-center col-xs-12 col-md-6 col-lg-6">
-            <%= image_tag ("http://placehold.it/220x220") %>
+            <%= cl_image_tag @booking.user.profile_img %>
           </div>
 
           <div class="owner-description col-xs-12 col-md-6 col-lg-6">
