finished with the listing layout and styling. feel free to change colors

--- a/app/assets/stylesheets/dashboard/_misc.scss
+++ b/app/assets/stylesheets/dashboard/_misc.scss
@@ -17,3 +17,15 @@ hr {
 #title {
   margin-top: 10px;
 }
+.no-marg-bot {
+  margin-bottom: 0;
+}
+.marg-bot-5 {
+  margin-bottom: 5px;
+}
+.no-pad-left {
+  padding-left: 0;
+}
+.pad-right-5 {
+  padding-right: 5px;
+}
