--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -90,7 +90,7 @@
                 <li><%= link_to "Your Listings", user_path(@user), class: "sidenav-item" %></li>
                 <h2>Your Listings</h2>
                 <div class="space-top">
-                  <%= link_to "Add New Listing", user_path(@user), class: "btn btn-addlist" %>
+                  <%= link_to "Add New Listing", new_boat_path(@user), class: "btn btn-addlist" %>
                 </div>
               </ul>
             </div>
@@ -99,26 +99,24 @@
               <div class="space-1 h3">
                 Should only appear if i have no listings. CHANGE THE PATHS, CAUSE AL THE PATHS LEAD TO ROME
               </div>
-
-                <div class="row">
                 <% @boats.each do |boat| %>
-                  <div class="col-md-3 pad-12">
+                <div class="row panel">
+                  <div class="col-md-3 no-pad-left pad-right-5">
                     <div class="panel-image boat-background middle" style= "background-image: linear-gradient(-225deg, rgba(0,78,55,0.3) 0%, rgba(0,36,61,0.3) 50%), url('<%= image_path('bananaboat') %>')">
                     </div>
                   </div>
                   <div class="col-md-9 pad-12">
                     <div>
-                      <h3 id="title"><%= boat.name %> - <%= boat.city %></h3>
+                      <h3 id="title" class="marg-bot-5"><%= boat.name %> - <%= boat.city %></h3>
                       <hr id="line-more-top">
-                      <p><%= boat.category %> - Capacity: <%= boat.capacity %> - Price: <%= boat.price %></p>
+                      <p><%= boat.category %> - Capacity: <%= boat.capacity %> - Price: <%= boat.price %>€</p>
                       <p style="opacity: 0.7"><%= boat.description %></p>
                     </div>
                   </div>
-                <% end %>
                 </div>
-
+                <% end %>
               <div class="space-top">
-                  <%= link_to "Add New Listing", user_path(@user), class: "btn btn-addlist" %>
+                  <%= link_to "Add New Listing", new_boat_path(@user), class: "btn btn-addlist" %>
                 </div>
             </div>
 
