--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -17,7 +17,7 @@
   margin: 0 10px;
   background-color: $sea-serpent;
   opacity: 1;
-  color: $platinum;
+  color: white;
   border-radius: 4px;
 }
 
