--- a/app/views/boats/_form.html.erb
+++ b/app/views/boats/_form.html.erb
@@ -1,26 +1,35 @@
-<h2>Add a new boat</h2>
-<%= simple_form_for(@boat) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+<div class="row">
+  <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+    <div class="boat-form">
+    <div class="row">
+      <div class="col-lg-12 boat-form-header">
+        <h2>become a boat</h2>
+      </div>
+    </div>
+    <%= simple_form_for(@boat) do |f| %>
 
-  <%= f.label :description %>
-  <%= f.text_field :description %>
+    <div class="form-group form-inline">
 
-  <%= f.input :category, priority: [ "Shrimp Boat" ], collection: ["Fishing Boat", "Sail Boat", "Canoe", "Speed Boat", "Yacht", "Houseboat", "Banana Boat", "Kayak", "Life Boat", "Pirate Ship", "Shrimp Boat", "Tug Boat"] %>
+    <%= f.text_field :name, placeholder: 'name', label:false %>
 
-  <%= f.label :capacity %>
-  <%= f.text_field :capacity %>
+    <%= f.text_field :description, placeholder: 'description', label:false %>
 
-  <%= f.label :price %>
-  <%= f.text_field :price %>
+    <%= f.input :category, priority: [ "Shrimp Boat" ], collection: ["Fishing Boat", "Sail Boat", "Canoe", "Speed Boat", "Yacht", "Houseboat", "Banana Boat", "Kayak", "Life Boat", "Pirate Ship", "Shrimp Boat", "Tug Boat"], prompt: 'category', label:false %>
 
-  <%= f.label :city %>
-  <%= f.text_field :city %>
+    </div>
 
-  <%= f.label :address %>
-  <%= f.text_field :address %>
+    <%= f.text_field :capacity, placeholder: 'capacity', label:false %>
 
-  <%= f.input :photo %>
+    <%= f.text_field :price, placeholder: 'price', label:false %>
 
-  <%= f.button :submit %>
-<% end %>
+    <%= f.text_field :city, placeholder: 'city', label:false %>
+
+    <%= f.text_field :address, placeholder: 'address', label:false %>
+    <%= f.input :photo %>
+
+
+    <%= f.button :submit, 'submit boat', class: "btn" %>
+      <% end %>
+    </div>
+  </div>
+</div>
