--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.45) 0%, rgba(0,36,61,0.45) 50%), url('<%= asset_path('boat7.jpg') %>')">
   <div class="banner-content">
     <h1>AHOY CAP'N</h1>
-    <h3>where's the next destination?</h3>
+    <h3>what's your next destination?</h3>
     <div class="search-bar">
       <div class="form-inline">
         <%= simple_form_for @boat, url: boats_path, method: :get do |f| %>
