added the listing with buttons show and edit

--- a/app/assets/stylesheets/dashboard/_misc.scss
+++ b/app/assets/stylesheets/dashboard/_misc.scss
@@ -29,3 +29,13 @@ hr {
 .pad-right-5 {
   padding-right: 5px;
 }
+.space-top {
+  margin: 25px 0;
+}
+.space {
+  margin-bottom: 24px;
+}
+.space-1 {
+  margin-bottom: 18px;
+  margin-top: 0;
+}
