--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -5,9 +5,10 @@
     <div class="responsive">
       <ul class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active"><a href="#dashboard" aria-controls="home" role="tab" data-toggle="tab">Dashboard</a></li>
-        <li role="presentation"><a href="#my-listings" aria-controls="profile" role="tab" data-toggle="tab">My Listings</a></li>
+        <li role="presentation"><a href="#my-listings" aria-controls="profile" role="tab" data-toggle="tab">My Boats</a></li>
         <li role="presentation"><a href="#my-voyages" aria-controls="messages" role="tab" data-toggle="tab">My Voyages</a></li>
         <li role="presentation"><a href="#profile" aria-controls="settings" role="tab" data-toggle="tab">Profile</a></li>
+        <li role="presentation"><a href="#requests" aria-controls="settings" role="tab" data-toggle="tab">Requests</a></li>
       </ul>
     </div>
   </div>
@@ -96,16 +97,19 @@
             </div>
             <div class="dash-aside col-md-10">
 
+              <% if !@user.boats %>
               <div class="space-1 h3">
-                Should only appear if i have no listings. CHANGE THE PATHS, CAUSE AL THE PATHS LEAD TO ROME
+                Ah, it seems you have no Boats listed yet.GET BACK HERE AND ADD A BOAT YOU SCRUB!
               </div>
+              <% end %>
+
                 <% @boats.each do |boat| %>
                 <div class="row panel">
-                  <div class="col-md-3 no-pad-left pad-right-5">
+                  <div class="col-md-3 pad-12">
                     <div class="panel-image boat-background middle" style= "background-image: linear-gradient(-225deg, rgba(0,78,55,0.3) 0%, rgba(0,36,61,0.3) 50%), url('<%= image_path('bananaboat') %>')">
                     </div>
                   </div>
-                  <div class="col-md-9 pad-12">
+                  <div class="col-md-7 pad-12">
                     <div>
                       <h3 id="title" class="marg-bot-5"><%= boat.name %> - <%= boat.city %></h3>
                       <hr id="line-more-top">
@@ -113,11 +117,15 @@
                       <p style="opacity: 0.7"><%= boat.description %></p>
                     </div>
                   </div>
+                  <div class="col-md-2 text-center">
+                    <div class="pad-top-6"><%= link_to "Show", boat_path(@user), class: "btn btn-listing" %></div>
+                    <div class="pad-top-6"><%= link_to "Edit", edit_boat_path(@user), class: "btn btn-listing" %></div>
+                  </div>
                 </div>
                 <% end %>
               <div class="space-top">
-                  <%= link_to "Add New Listing", new_boat_path(@user), class: "btn btn-addlist" %>
-                </div>
+                <%= link_to "Add New Listing", new_boat_path(@user), class: "btn btn-addlist" %>
+              </div>
             </div>
 
           </div>
@@ -166,6 +174,16 @@
       </div>
     </div>
 
+<!-- EVERYTHING SHOULD BE EDITED IN HERE FOR EACH TAB. ALL HTML CODE GOES IN HERE!-->
+    <div role="tabpanel" class="tab-pane" id="requests">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h1>Work on this Alex</h1>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
   </div>
