--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,17 +1,28 @@
+<div class="row">
+  <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+    <div class="profile-form">
+      <div class="row">
+        <div class="col-lg-12 profile-form-header">
+          <h2>Edit your Profile</h2>
+        </div>
+      </div>
+      <%= simple_form_for(@user) do |f| %>
 
-<%= simple_form_for(@user) do |f| %>
+        <%= f.input :profile_img %>
+        <%= f.input :profile_img_cache, as: :hidden %>
 
-  <%= f.input :profile_img %>
-  <%= f.input :profile_img_cache, as: :hidden %>
+        <%= f.text_field :first_name, placeholder: 'first name', label:false%>
 
-  <%= f.label :first_name %>
-  <%= f.text_field :first_name %>
+        <%= f.text_field :last_name, placecholder: 'last name', label:false %>
 
-  <%= f.label :last_name %>
-  <%= f.text_field :last_name %>
+        <%= f.text_field :bio, placeholder: 'bio', label:false %>
 
-  <%= f.label :bio %>
-  <%= f.text_field :bio %>
+        <%= f.button :submit, "update profile", class: "btn" %>
+      <% end %>
 
-  <%= f.button :submit %>
-<% end %>
+
+    </div>
+  </div>
+</div>
+
+
