finished the listing of your boats. dont show on mobile. it wont look good. looks good on desktop

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -105,7 +105,7 @@
 
                 <% @boats.each do |boat| %>
                 <div class="row panel">
-                  <div class="col-md-3 pad-12">
+                  <div class="col-md-3 pad-25-right">
                     <div class="panel-image boat-background middle" style= "background-image: linear-gradient(-225deg, rgba(0,78,55,0.3) 0%, rgba(0,36,61,0.3) 50%), url('<%= image_path('bananaboat') %>')">
                     </div>
                   </div>
