tiny change in code to fix host image

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -30,7 +30,7 @@
         <h2 id="host-header">Your Host:</h2>
         <div class="row is-flex">
           <div class="owner-image text-center col-xs-12 col-md-6 col-lg-6">
-            <%= cl_image_tag @booking.user.profile_img %>
+            <%= cl_image_tag @booking.boat.user.profile_img %>
           </div>
 
           <div class="owner-description col-xs-12 col-md-6 col-lg-6">
