minor changes on navbar and homepage search

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,6 +7,7 @@
   padding: 10px 5px;
   color: $payne-grey;
   border-radius: 4px;
+  width: 450px;
 }
 
 .search-bar label {
@@ -30,6 +31,7 @@
   opacity: 0.6;
   color: $payne-grey;
   border: none;
+
 }
 
 .form-control {
