--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -15,7 +15,10 @@
   text-decoration: none;
   color: $payne-grey;
   padding-right: 15px;
+}
 
+.navbar-wagon a:hover {
+  color: $sea-serpent;
 }
 /* Optional class to fix the navbar on top */
 .navbar-wagon-fixed {
@@ -85,6 +88,7 @@
   justify-content: flex-end;
   padding: 0 20px;
   position: relative;
+  letter-spacing: 2px;
 }
 .navbar-wagon-search-btn {
   line-height: 40px;
@@ -92,9 +96,10 @@
   border: none;
   background: transparent;
   position: absolute;
-  right: 24px;
+  right: 18px;
   top: -2px;
   z-index: 1;
+  margin-right: 10px;
 }
 .navbar-wagon-search-input {
   flex: 0 1 300px;
@@ -105,7 +110,7 @@
   color: $payne-grey;
   border: none;
   border-radius: 4px;
-  padding: 0 10px;
+  padding: 0 20px 0 10px;
   font-size: 14px;
   outline: none;
 
@@ -123,7 +128,7 @@
 .navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
-  color: #999999 !important;
+  color: $payne-grey !important;
   font-size: 15px !important;
   line-height: 22px !important;
   padding: 10px 20px;
@@ -148,3 +153,5 @@
 .navbar-wagon-brand:hover {
   opacity: 0.5;
 }
+
+
