--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,8 +5,8 @@
     <div class="search-bar">
       <div class="form-inline">
         <%= simple_form_for @boat, url: boats_path, method: :get do |f| %>
-          <%= f.input :address, required: false %>
-          <%= f.input :category, priority: [ "Shrimp Boat" ], collection: ["Fishing Boat", "Sail Boat", "Canoe", "Speed Boat", "Yacht", "Houseboat", "Banana Boat", "Kayak", "Life Boat", "Pirate Ship", "Shrimp Boat", "Tug Boat"], required: false  %>
+          <%= f.input :address, required: false, placeholder: "address", label:false %>
+          <%= f.input :category, priority: [ "Shrimp Boat" ], collection: ["Fishing Boat", "Sail Boat", "Canoe", "Speed Boat", "Yacht", "Houseboat", "Banana Boat", "Kayak", "Life Boat", "Pirate Ship", "Shrimp Boat", "Tug Boat"], required: false, prompt: 'category', label:false  %>
           <%= f.button :submit, 'search',  class: "btn btn-primary"  %>
         <% end %>
        </div>
