added default image for boat

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -12,7 +12,7 @@
         <h2 id="boat-header">The Boat:</h2>
         <div class="row is-flex">
           <div class="boat-image text-center col-xs-12 col-md-6 col-lg-6">
-            <%= cl_image_tag @booking.boat.photo %>
+            <%= image_tag @booking.boat.photo %>
           </div>
 
           <div class="boat-description col-xs-12 col-md-6 col-lg-6">
