--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,18 +1,19 @@
 <!-- FOOTER -->
-
-<div id="footer-black">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-4">
-        <ul class="list-inline">
-          <li><a href="https://www.facebook.com"><i class="fa fa-facebook" target="blank"></i></a></li>
-          <li><a href="https://www.instagram.com"><i class="fa fa-instagram" target="blank"></i></a></li>
-          <li><a href="https://www.youtube.com"><i class="fa fa-youtube" target="blank"></i></a></li>
-          <li><a href="https://www.twitter.com"><i class="fa fa-twitter" target="blank"></i></a></li>
-        </ul>
-      </div>
-      <div class="col-xs-8 text-right">
-        <p>©seabnb</p>
+<div class="footer-container">
+  <div id="footer-black">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-4">
+          <ul class="list-inline">
+            <li><a href="https://www.facebook.com"><i class="fa fa-facebook" target="blank"></i></a></li>
+            <li><a href="https://www.instagram.com"><i class="fa fa-instagram" target="blank"></i></a></li>
+            <li><a href="https://www.youtube.com"><i class="fa fa-youtube" target="blank"></i></a></li>
+            <li><a href="https://www.twitter.com"><i class="fa fa-twitter" target="blank"></i></a></li>
+          </ul>
+        </div>
+        <div class="col-xs-8 text-right">
+          <p>©seabnb</p>
+        </div>
       </div>
     </div>
   </div>
