--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,5 @@
 @import "components/index";
 @import "pages/index";
 @import "dashboard/tabs";
-@import "dashboard/dash"
+@import "dashboard/dash";
+
