fixed image sizes on booking page

--- a/app/assets/stylesheets/pages/_booking_new.scss
+++ b/app/assets/stylesheets/pages/_booking_new.scss
@@ -57,7 +57,9 @@
 }
 
 .boat-image img, .owner-image img {
-  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  border-radius: 5%;
 }
 .row.is-flex {
     display: flex;
