--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -11,7 +11,7 @@
       <div class="boat-info">
         <h2 id="boat-header">The Boat:</h2>
         <div class="row is-flex">
-          <div class="boat-image text-center col-xs-12 col-md-6 col-lg-6">
+          <div class="boat-image text-center col-xs-8-offset-5 col-md-6 col-lg-6">
             <%= image_tag @booking.boat.photo %>
           </div>
 
