fixed search bar

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -7,7 +7,7 @@
   display: flex;
   // align-items: center;
   justify-content: center;
-  position: relative;
+  // position: relative;
 }
 .banner h1 {
   font-size: 100px;
@@ -32,10 +32,7 @@
 }
 
 .banner-content {
-  margin-top: 65px;
+  margin-top: 60px;
 }
 
-.search-bar {
-  margin-top: 250px;
 
-}
