--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,7 +7,9 @@
   padding: 10px 5px;
   color: $payne-grey;
   border-radius: 4px;
-  width: 450px;
+  width: 460px;
+  margin: 220px auto 0 auto;
+
 }
 
 .search-bar label {
@@ -40,3 +42,13 @@ opacity: 0.6;
 color: $payne-grey;
 border: none;
 }
+
+.form-date-picker {
+  padding-bottom: 10px;
+}
+
+.form-date-picker label {
+  padding-bottom: 4px;
+}
+
+
