--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.45) 0%, rgba(0,36,61,0.45) 50%), url('<%= asset_path('boat7.jpg') %>')">
   <div class="banner-content">
     <h1>AHOY CAP'N</h1>
@@ -8,16 +9,39 @@
           <%= f.input :address, required: false %>
           <%= f.input :category, priority: [ "Shrimp Boat" ], collection: ["Fishing Boat", "Sail Boat", "Canoe", "Speed Boat", "Yacht", "Houseboat", "Banana Boat", "Kayak", "Life Boat", "Pirate Ship", "Shrimp Boat", "Tug Boat"], required: false  %>
           <%= f.simple_fields_for @booking do |booking_form| %>
-          <%= booking_form.input :check_in, input_html: { id: "datepicker" }%>
-
-          <%= booking_form.input :check_out, input_html: { id: "datepicker" }%>
+          <div class="input-daterange form-group input-group" id="datepicker">
+          <%= booking_form.input :check_in, as: :string, input_html: { class: "input-sm form-control" }%>
+          <span class="input-group-addon">to</span>
+          <%= booking_form.input :check_out, as: :string, input_html: { class: "input-sm form-control" }%>
           <% end %>
+          </div>
           <%= f.button :submit, 'search',  class: "btn btn-primary"  %>
         <% end %>
        </div>
     </div>
   </div>
 </div>
+
+<% content_for(:after_js) do %>
+  <%= javascript_tag do %>
+  $(document).ready(function(){
+    $('.input-daterange').datepicker();
+  });
+  <% end %>
+<% end %>
+
+
+<!-- <form action=<%= boats_path %>>
+  <label for="address">Location</label>
+  <input type="text" name="address" value="Berlin, Germany">
+  <div class="input-daterange input-group" id="datepicker">
+      <input type="text" class="input-sm form-control" name="check_in" />
+      <span class="input-group-addon">to</span>
+      <input type="text" class="input-sm form-control" name="check_out" />
+  </div>
+  <input type="submit" value="Submit">
+</form> -->
+
 
 
 
