--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -9,41 +9,26 @@
 
   <div class="container boat-content">
 
-
-    <div class="row">
-      <div class="col-sm-12 col-md-8">
+  <div class="row">
+    <div class="col-sm-12 col-md-8">
       <h2><%= @boat.name %></h2>
       <ul class="list-inline">
         <li><%= @boat.city %></li>
         <li><%= @boat.category %></li>
       </ul>
-        <p><%= @boat.description %></p>
+      <p><%= @boat.description %></p>
+    </div>
+
+    <div class="col-sm-12 col-md-3 col-md-offset-1 boat-table text-center">
+      <div class="table-header">
+        <h4>PRICE PER DAY: $<%= @boat.price %></h4>
       </div>
-
-      <div class="col-sm-12 col-md-3 col-md-offset-1">
-        <table class="text-center test-table">
-          <thead class="boat-header">
-          <tr>
-            <td>Price per day: <%= @boat.price %></td>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><strong>check in</strong> 12/05/17</td>
-            </tr>
-            <tr>
-              <td><strong>check out</strong> 20/05/17</td>
-            </tr>
-            <tr>
-              <td><strong>TOTAL</strong> $<%= @boat.price * 8 %></td>
-            </tr>
-            <tr>
-              <td><%= link_to 'book now', new_boat_booking_path(@boat), class: 'btn btn-book' %></td>
-            </tr>
-          </tbody>
-
-        </table>
+      <div class="table-content">
+        <div class="table-light"><p><strong>check in</strong> 12/05/17</p></div>
+        <div class="table-dark"><p><strong>check out</strong> 20/05/17</p></div>
+        <div class="table-light"><p><strong>TOTAL</strong> $<%= @boat.price * 8 %></p></div>
+        <p><%= link_to 'book now', new_boat_booking_path(@boat), class: 'btn btn-book' %></p>
+      </div>
     </div>
   </div>
-
 </div>
