--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -21,23 +21,14 @@
       <div class="space-top">
         <div class="container">
           <div class="row">
-            <div class="dash-body col-md-3">
+            <div class="dash-body col-md-3 col-xs-3">
               <div class="panel">
                 <div class="panel-image profile-photo">
                   <!-- ADD PICTURE HERE -->
-                  <%= cl_image_tag @user.profile_img, height: 300, width: 400, crop: :fill %>
-                  <!-- ADD PICTURE HERE -->
-                  <div class="upload-profile-pic btn btn-contrast btn-block text-wrap">
-                    <%= simple_form_for(@user) do |f| %>
-                      <%= f.input :profile_img %>
-                      <%= f.input :profile_img_cache, as: :hidden %>
-                      <%= f.submit %>
-                    <% end %>
-                    <!-- ADD PHOTO HERE! link to shit -->
-                    <i class="fa fa-camera icon" aria-hidden="true"></i>
-
-                    Add a Photo
+                  <div class="actual-photo">
+                  <%= cl_image_tag @user.profile_img, height: 160, width: 160, crop: :fill %>
                   </div>
+                  <!-- ADD PICTURE HERE -->
                 </div>
                 <div class="panel-body">
                   <h2 class="text-center"><%= @user.full_name %></h2>
@@ -57,7 +48,7 @@
               </div>
             </div>
 
-            <div class="dash-aside col-md-9">
+            <div class="dash-aside col-md-9 col-xs-9">
               <div class="panel">
                 <div class="panel-header" id="notification">
                   Notification
@@ -99,7 +90,7 @@
 
               <% if !@user.boats %>
               <div class="space-1 h3">
-                Ah, it seems you have no Boats listed yet.GET BACK HERE AND ADD A BOAT YOU SCRUB!
+                Ah, it seems you have no Boats listed yet. GET BACK HERE AND ADD A BOAT YOU SCRUB!
               </div>
               <% end %>
 
