changed the static to dynamic picture

--- a/app/assets/stylesheets/components/_boat_form.scss
+++ b/app/assets/stylesheets/components/_boat_form.scss
@@ -65,3 +65,8 @@
 .boat-category {
   width: 390px;
 }
+.boat-background {
+  background-size: cover !important;
+  background-position: center;
+  background-repeat: no-repeat;
+}
