--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -24,12 +24,16 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
-.boat-background {
-  background-size: cover !important;
-  background-position: center;
-  background-repeat: no-repeat;
+.profile-large-bordered {
+  border-radius: 50%;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: white 1px solid;
 }
 .avatar-position {
   top: 180px;
   left: 156.5px;
+}
+.dash_profile {
+  max-width:50%;
+  max-height:100%;
 }
