--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -28,14 +28,8 @@
                   <%= cl_image_tag @user.profile_img, height: 300, width: 400, crop: :fill %>
                   <!-- ADD PICTURE HERE -->
                   <div class="upload-profile-pic btn btn-contrast btn-block text-wrap">
-                    <%= simple_form_for(@user) do |f| %>
-                      <%= f.input :profile_img %>
-                      <%= f.input :profile_img_cache, as: :hidden %>
-                      <%= f.submit %>
-                    <% end %>
                     <!-- ADD PHOTO HERE! link to shit -->
                     <i class="fa fa-camera icon" aria-hidden="true"></i>
-
                     Add a Photo
                   </div>
                 </div>
@@ -98,15 +92,15 @@
             <div class="dash-aside col-md-10">
 
               <% if !@user.boats %>
-              <div class="space-1 h3">
-                Ah, it seems you have no Boats listed yet.GET BACK HERE AND ADD A BOAT YOU SCRUB!
-              </div>
+                <div class="space-1 h3">
+                  Ah, it seems you have no Boats listed yet.GET BACK HERE AND ADD A BOAT YOU SCRUB!
+                </div>
               <% end %>
 
                 <% @boats.each do |boat| %>
                 <div class="row panel">
                   <div class="col-md-3 pad-25-right">
-                    <div class="panel-image boat-background middle" style= "background-image: linear-gradient(-225deg, rgba(0,78,55,0.3) 0%, rgba(0,36,61,0.3) 50%), url('<%= boat.photo %>')">
+                    <div class="panel-image boat-background middle" style= "background-image: linear-gradient(-225deg, rgba(0,78,55,0.3) 0%, rgba(0,36,61,0.3) 50%), url('<%= boat.photo || bananaboat %>')">
                     </div>
                   </div>
                   <div class="col-md-7 pad-12">
@@ -119,7 +113,8 @@
                   </div>
                   <div class="col-md-2 text-center">
                     <div class="pad-top-6"><%= link_to "Show", boat_path(@user), class: "btn btn-listing" %></div>
-                    <div class="pad-top-6"><%= link_to "Edit", edit_boat_path(@user), class: "btn btn-listing" %></div>
+                    <div class="pad-top-6"><%= link_to "Edit", edit_boat_path(@user), class: "btn btn-listing" %>
+                    </div>
                   </div>
                 </div>
                 <% end %>
@@ -141,8 +136,15 @@
           <% @bookings.each do |booking| %>
           <div class="dash-body col-md-4">
             <div class="panel">
-              <div class="panel-image boat-background big" style= "background-image: linear-gradient(-225deg, rgba(0,78,55,0.3) 0%, rgba(0,36,61,0.3) 50%), url('<%= image_path('bananaboat') %>')">
-                <div class="text-center pos-abs avatar-position"><%= image_tag ("https://cms-assets.tutsplus.com/uploads/users/107/posts/25507/image/38-flat-professions-avatars-icons.jpg"), class: "avatar-large-bordered" %>
+              <div class="panel-image boat-background big" style= "background-image: linear-gradient(-225deg, rgba(0,78,55,0.3) 0%, rgba(0,36,61,0.3) 50%), url('<%= booking.boat.photo %>')">
+                <div class="text-center pos-abs avatar-position">
+
+                <% if booking.boat.user.profile_img.nil? %>
+                  <%= image_tag ("https://cms-assets.tutsplus.com/uploads/users/107/posts/25507/image/38-flat-professions-avatars-icons.jpg"), class: "avatar-large-bordered" %>
+                <% else %>
+                  <%= cl_image_tag booking.boat.user.profile_img_url, height: 50, width: 50, crop: :fill, class: "profile-large-bordered" %>
+                <% end %>
+
                 </div>
               </div>
 
