--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
   </div>
 </div>
 </div>
-
+<!-- hi kevin -->
 <% content_for(:after_js) do %>
   <%= javascript_tag do %>
   $(document).ready(function(){
