--- a/app/assets/stylesheets/dashboard/_listings.scss
+++ b/app/assets/stylesheets/dashboard/_listings.scss
@@ -3,7 +3,7 @@
 }
 .btn-listing {
   width: 100%;
-  background-color: green;
+  background-color: $sunset-orange;
   color: white;
 }
 .pad-top-bot {
