--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -21,8 +21,10 @@
     </ul>
   </div>
   <div class="dates-and-price">
-    <%= render 'form' %>
-    <!-- use js to dynamically calculate price based on chosen dates -->
-    <h3>Price: <%= (@booking.check_out - @booking.check_in * @booking.price) %></h3>
+    <ul>
+      <li>Check in: <%= @booking.check_in %></li>
+      <li>Check out: <%= @booking.check_out %></li>
+      <li>Price <%= (@booking.check_out - @booking.check_in) * @booking.boat.price %></li>
+    </ul>
   </div>
 </div>
