--- a/app/assets/stylesheets/pages/_booking_new.scss
+++ b/app/assets/stylesheets/pages/_booking_new.scss
@@ -6,12 +6,13 @@
 
 .booking-container {
   hr {border: 1px solid $platinum}
-  h2, h3 {font-family: $base-font;
+  h2 {font-family: $base-font;
   text-align: left;
   margin-top: 0px;}
   padding: 10px;
-  h1 {font-family: $base-font;
-    padding-bottom: 10px;}
+  h1 {font-family: $base-font; font-size: 28px;
+    letter-spacing: 2px; margin-top: 10px;
+    padding-bottom: 10px; margin-bottom: 0;}
 }
 .booking-container h3 {
   color: $payne-grey;
@@ -38,14 +39,15 @@
   color: white;
   background-color: $pastel-blue;
   padding: 15px;
-  margin-top: 5px;
+  margin-top: 0;
   margin-bottom: 10px;
 }
 .booking-header {
   color: white;
   background-color: $sea-serpent;
   padding-top: 1px;
-  border-radius: 4px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
 .btn-book {
   background-color: $sea-serpent;
@@ -59,7 +61,7 @@
 .boat-image img, .owner-image img {
   width: 100%;
   height: 100%;
-  border-radius: 5%;
+  border-radius: 4px;
 }
 .row.is-flex {
     display: flex;
@@ -67,4 +69,50 @@
     align-items: center;
 }
 
+.booking-container h2 {
+  font-size: 26px;
+  letter-spacing: 1.5px;
+}
 
+.boat-info {
+  padding: 35px 30px;
+  margin-bottom: 0;
+}
+
+.boat-info h3 {
+  font-family: $base-font;
+  text-align: left;
+  margin-top: 0px;
+}
+
+.owner-info h3 {
+  font-family: $base-font;
+  text-align: left;
+  margin-top: 0px;
+}
+
+.owner-info {
+  padding: 35px 30px;
+  border-top: white solid 10px;
+  margin-bottom: 0;
+}
+
+.dates-and-price {
+  padding: 35px 30px;
+  border-top: white solid 10px;
+  text-align: center;
+}
+
+.dates-and-price .btn {
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+
+.booking-form {
+  margin-bottom: 35px;
+}
+
+.booking-total-price h3 {
+  font-family: $base-font;
+  margin-top: 0px;
+}
