--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,7 +1,10 @@
-<%= simple_form_for [@boat, @booking] do |f| %>
-  <%= f.input :check_in, input_html: { class: "datepicker" }%>
+<div class="form-inline">
 
-  <%= f.input :check_out, input_html: { class: "datepicker" }%>
+  <%= simple_form_for [@boat, @booking] do |f| %>
+    <%= f.input :check_in, input_html: { class: "datepicker" }%>
 
-  <%= f.button :submit, "Create", class: "btn-book"%>
-<% end %>
+    <%= f.input :check_out, input_html: { class: "datepicker" }%>
+
+    <%= f.button :submit, "Create", class: "btn-book"%>
+  <% end %>
+</div>
